terraform/main.tf
provider "aws" {
  region = var.aws_region
}

resource "aws_instance" "ocr_server" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  key_name               = var.key_name
  associate_public_ip_address = true

  vpc_security_group_ids = [aws_security_group.ocr_sg.id]

  user_data = <<-EOF
              #!/bin/bash
              sudo apt-get update -y
              sudo apt-get install -y docker.io
              sudo systemctl start docker
	      sudo docker pull ${var.docker_image}:latest
              sudo docker run -d -p 5000:5000 ${var.docker_image}
              EOF

  tags = {
    Name = "OCR-Server"
  }
}

resource "aws_security_group" "ocr_sg" {
  name        = "ocr_sg"
  description = "Allow SSH and web traffic"
  vpc_id      = var.vpc_id  # Replace or remove if not using VPC

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = []
    prefix_list_ids  = []
    security_groups  = []
    self             = false
  }

  ingress {
    description = "Web"
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = []
    prefix_list_ids  = []
    security_groups  = []
    self             = false
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = []
    prefix_list_ids  = []
    security_groups  = []
    self             = false
  }

  tags = {
    Name = "ocr-sg"
  }
}
